# research_agent

./: .gitignore  README.md  bun.lockb  compose.yml  db.ts  example_report.md  index.ts  package.json  report.md
agents/: lead.ts  sub.ts
embedder/: embed.ipynb  hello.py  pyproject.toml
