[project]
name = "embedder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.13",
    "google-genai>=1.21.1",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "pandas>=2.3.0",
    "tqdm>=4.67.1",
]
